--- a/login-style.css
+++ b/login-style.css
@@ -5,370 +5,291 @@
   --button-bg: #1d1f1f;
   --highlite: #e03838;
   --mediatext-bg:#dcdcde;
---login-bg:#eee;
---form-bg-log: #e0dede;
+  --footer-primary: #F0776C ;
+  --footer-highlite:#fc9b92;
   --gradient-img: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8));
  }
 
-display-flex, .display-flex, .display-flex-center, .signup-content, .signin-content, .social-login, .socials {
-  display: flex;
+ /* .main-register{
+  border: 2px solid red;
  }
-
-
-/* @extend list-type-ulli; */
-list-type-ulli, .socials {
-  list-style-type: none;
-  margin: 0;
-  padding: 0; }
-
-
-a:focus, a:active {
-  text-decoration: none;
-  outline: none;
-  transition: all 300ms ease 0s;}
-
-/* input, select, textarea {
-  outline: none;
-  appearance: unset !important;
+ .register-container{
+  border: 2px solid green;
+ }
+ .form-group{
+  border: 2px solid blue;
  } */
-
-
-/* input:focus, select:focus, textarea:focus {
-  outline: none;
-  box-shadow: none !important;
-  -moz-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  -o-box-shadow: none !important;
-  -ms-box-shadow: none !important; } */
-
-
-/* img {
-  max-width: 100%;
-  height: auto; }
-
-figure {
-  margin: 0; } */
-
-
-
-
-.signup{
-  
+/* header{
+  display: none  ;
+} */
+ #main-login, #main-register{
+  height: 90vh;
+  width: 100vw;
+  background-color: var(--menu-bg);
   display: flex;
+  align-items: center;
   justify-content: center;
+}
+
+#main-login>div, #main-register>div {
+  /* border: 2px solid green; */
+  height: 100%;
+  width: 70vw;
+  display: flex;
   align-items: center;
 }
-.signup-content{
-  top: 50%;
-  left:50%;
+
+#main-login>div{
+  justify-content: center;
 }
-.signup {
-  margin-bottom: 50px; }
 
-.signup-content {
-  padding: 75px 0; }
+#main-register>div{
+  margin-top: 1% ;
+  justify-content: center;
+}
 
-.container {
-  top:100px;
-  width: 600px;
-  background: #fff;
-  margin: 0 auto;
-  box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05);
-  border-radius: 20px;
+
+.login-container, .register-container {
+  width: 390px;
+  background: white;
+  border-radius: 2.5%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.247);
+}
+
+.login-container {margin-top: 50px;  padding: 40px;}
+
+.register-container {margin-top: 100px; margin-bottom: auto; padding:40px 40px 20px 40px; 
   }
-
-.signup-form, .signup-image, .signin-form, .signin-image {
-  width: 50%;
-  overflow: hidden; }
-
-.form-title {
-  margin-bottom: 33px; }
-
-.form-submit {
-  display: inline-block;
-  background: #6dabe4;
-  color: #fff;
-  border-bottom: none;
-  width: auto;
-  padding: 15px 39px;
-  border-radius: 5px;
-  margin-top: 25px;
-  cursor: pointer; }
-  .form-submit:hover {
-    background: #4292dc; }
-
-#signin {
-  margin-top: 16px; }
-
-.signup-image-link {
-  font-size: 14px;
-  color: #222;
-  display: block;
-  text-align: center; }
-
-.term-service {
-  font-size: 13px;
-  color: #222; }
-
-.signup-form {
-  margin-left: 75px;
-  margin-right: 75px;
-  padding-left: 34px; }
-
-.register-form {
-  width: 100%; }
+.login-container h2, .register-container h2  {
+  text-align: center;
+  margin-bottom: 50px;
+}
 
 .form-group {
+  margin-bottom: 30px;
   position: relative;
-  margin-bottom: 25px;
-  overflow: hidden; }
-  .form-group:last-child {
-    margin-bottom: 0px; }
+}
+.form-group div{
+  margin-bottom: 10px;
+}
 
-input {
-  width: 100%;
+
+.form-group label {
   display: block;
+  margin-bottom: 5px;
+}
+
+.form-group input {
+  width: calc(100% - 30px);
+  padding: 15px 22px;
+  margin-bottom: 10px;
   border: none;
-  border-bottom: 1px solid #999;
-  padding: 6px 30px;
+  outline: none;
+}
+
+.form-group input:focus {
+  color: var(--menu-bg);
+  border-bottom-color: var(--button-bg);
+}
+
+.form-group .input-icon {
+  position: absolute;
+  top: 52px;
+  color: #aaa;
+  z-index: 100;
+}
+@media screen and (max-width: 1025px){
+  .login-container{
+      margin: auto;
+  }
+  /* .register-container{
+      margin: auto;
+  } */
+}
+
+
+@media(max-width:576px){
+  footer{display: none;}
+
+  #main-login, #main-register{
+  background-color: white;
+  min-width: 100vw;
+  min-height: 100vh;
+}
+#main-login>div, #main-register>div{
+  width: 100%;
+  height: 100%;
+}
+.login-container, .register-container {
+  margin-top: 20px;
+  width: 100%;
+  padding: 0 10%;
+  background: none;
+  border-radius: none;
+  box-shadow: none;
+}
+.login-container, .register-container{
+  margin: 10% 0 0 0;
+}
+.login-container h2, .register-container h2{
+  margin-bottom: 40px;
+}
+.form-group, .form-group label{
+  margin-bottom: 30px;
+}
+}
+
+
+@media screen and (max-width: 376px){
+  .login-container, .register-container{
+      margin: 70px 0 0 0!important;
+  }
+}
+
+
+.btn-login-register{
+  width: 100%;
+  margin: 20px 0;
+  padding: 15px;
+  border: none;
+  background-color: var(--menu-color);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
   
-  box-sizing: border-box; }
- 
-  input:focus {
-    border-bottom: 1px solid #222; }
-  
+}
 
-input[type=checkbox]:not(old) {
-  width: 2em;
-  margin: 0;
-  padding: 0;
-  font-size: 1em;
-  display: none; }
+.btn-login-register:hover{
+  background-color: var(--highlite);
+}
 
-input[type=checkbox]:not(old) + label {
-  display: inline-block;
-  line-height: 1.5em;
-  margin-top: 6px; }
-
-input[type=checkbox]:not(old) + label > span {
-  display: inline-block;
-  width: 13px;
-  height: 13px;
-  margin-right: 15px;
-  margin-bottom: 3px;
-  border: 1px solid #999;
-  border-radius: 2px;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -o-border-radius: 2px;
-  -ms-border-radius: 2px;
-  background: white;
-  
-  vertical-align: bottom; }
-
-input[type=checkbox]:not(old):checked + label > span {
-  background-image: -moz-linear-gradient(white, white);
-  background-image: -ms-linear-gradient(white, white);
-  background-image: -o-linear-gradient(white, white);
-  background-image: -webkit-linear-gradient(white, white);
-  background-image: linear-gradient(white, white); }
-
-input[type=checkbox]:not(old):checked + label > span:before {
-  /* content: '\f26b'; */
-  display: block;
-  color: #222;
-  font-size: 11px;
-  line-height: 1.2;
+.signin, .login-link {
+  margin-top:60px;
   text-align: center;
-  font-weight: bold; }
+  margin-bottom: 10px;
+}
+.signup, .login-link {
+  margin-top:15px;
+  text-align: center;
+  margin-bottom: px;
+}
 
-.agree-term {
-  display: inline-block;
-  width: auto; }
+ .signin a,  .signup a, .login-link a {
+  color: var(--highlite);
+  text-decoration: none;
+}
 
-label {
+.signup a:hover, .login-link a:hover{
+  text-decoration: underline;
+  color: var(--button-bg);
+}
+
+@media screen and (max-width:576px){
+  .btn-login-register{
+      margin: 20px 0;
+  }
+  .signin p , .signup p, .login-link p{
+      margin: 0;
+  }
+  .signin .signup, .login-link{
+      background-color: white;
+      border-radius: 25px;
+      padding: 5px;
+  }
+}
+
+
+
+
+
+.wrap-input100 {
+  width: 100%;
+  position: relative;
+  border-bottom: 2px solid #adadad;
+  margin-bottom: 37px;
+}
+
+.input100 {
+  color: #555555;
+  line-height: 1.2;
+  display: block;
+  width: 100%;
+  height: 45px;
+  background: transparent;
+  padding: 0 5px;
+}
+
+/*---------------------------------------------*/ 
+.focus-input100 {
   position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
   left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #222; }
+  pointer-events: none;
+}
 
-.label-has-error {
-  top: 22%; }
-
-label.error {
-  position: relative;
-  background: url("../images/unchecked.gif") no-repeat;
-  background-position-y: 3px;
-  padding-left: 20px;
-  display: block;
-  margin-top: 20px; }
-
-label.valid {
+.focus-input100::before {
+  content: "";
   display: block;
   position: absolute;
-  right: 0;
-  left: auto;
-  margin-top: -6px;
-  width: 20px;
-  height: 20px;
-  background: transparent; }
-  label.valid:after {
-    content: '\f269';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    /* right: 0; */
-    font-size: 16px;
-    color: green; }
+  bottom: -2px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  transition: all 0.4s;
+}
 
-.label-agree-term {
-  position: relative;
-  top: 0%;
-  transform: translateY(0);
-  -moz-transform: translateY(0);
-  -webkit-transform: translateY(0);
-  -o-transform: translateY(0);
-  -ms-transform: translateY(0); }
+.focus-input100::after {
+  color: #999999;
+  line-height: 1.2;
+  content: attr(data-placeholder);
+  display: block;
+  width: 100%;
+  position: absolute;
+  top: 16px;
+  left: 0px;
+  padding-left: 5px;
+  transition: all 0.4s;
+}
 
-.material-icons-name {
-  font-size: 18px; }
+.input100:focus + .focus-input100::after {
+  top: -15px;
+}
 
-.signin-content {
-  padding-top: 67px;
-  padding-bottom: 87px; }
+.input100:focus + .focus-input100::before {
+  width: 100%;
+}
 
-.social-login {
+.has-val.input100 + .focus-input100::after {
+  top: -15px;
+}
+
+.has-val.input100 + .focus-input100::before {
+  width: 100%;
+}
+
+
+.btn-show-pass {
+  font-size: 15px;
+  color: #999999;
+  display: flex;
   align-items: center;
-  -moz-align-items: center;
-  -webkit-align-items: center;
-  -o-align-items: center;
-  -ms-align-items: center;
-  margin-top: 80px; }
+  position: absolute;
+  height: 100%;
+  top: 0;
+  right: 0;
+  padding-right: 5px;
+  cursor: pointer;
+  transition: all 0.4s;
+}
 
-.social-label {
-  display: inline-block;
-  margin-right: 15px; }
+.btn-show-pass:hover {
+  color: var(--highlite);
+}
 
-.socials li {
-  padding: 5px; }
-  .socials li:last-child {
-    margin-right: 0px; }
-  .socials li a {
-    text-decoration: none; }
-    .socials li a i {
-      width: 30px;
-      height: 30px;
-      color: #fff;
-      font-size: 14px;
-      border-radius: 5px;
-      -moz-border-radius: 5px;
-      -webkit-border-radius: 5px;
-      -o-border-radius: 5px;
-      -ms-border-radius: 5px;
-      transform: translateZ(0);
-      -moz-transform: translateZ(0);
-      -webkit-transform: translateZ(0);
-      -o-transform: translateZ(0);
-      -ms-transform: translateZ(0);
-      -webkit-transition-duration: 0.3s;
-      transition-duration: 0.3s;
-      -webkit-transition-property: transform;
-      transition-property: transform;
-      -webkit-transition-timing-function: ease-out;
-      transition-timing-function: ease-out; }
-  .socials li:hover a i {
-    -webkit-transform: scale(1.3) translateZ(0);
-    transform: scale(1.3) translateZ(0); }
+.btn-show-pass.active {
+  color: var(--highlite);
+}
 
-.zmdi-facebook {
-  background: #3b5998; }
-
-.zmdi-twitter {
-  background: #1da0f2; }
-
-.zmdi-google {
-  background: #e72734; }
-
-.signin-form {
-  margin-right: 90px;
-  margin-left: 80px; }
-
-.signin-image {
-  margin-left: 110px;
-  margin-right: 20px;
-  margin-top: 10px; }
-
-@media screen and (max-width: 1200px) {
-  .container {
-    width: calc( 100% - 30px);
-    max-width: 100%; } }
-@media screen and (min-width: 1024px) {
-  .container {
-    max-width: 1200px; } }
-@media screen and (max-width: 768px) {
-  .signup-content, .signin-content {
-    flex-direction: column;
-    -moz-flex-direction: column;
-    -webkit-flex-direction: column;
-    -o-flex-direction: column;
-    -ms-flex-direction: column;
-    justify-content: center;
-    -moz-justify-content: center;
-    -webkit-justify-content: center;
-    -o-justify-content: center;
-    -ms-justify-content: center; }
-
-  .signup-form {
-    margin-left: 0px;
-    margin-right: 0px;
-    padding-left: 0px;
-    /* box-sizing: border-box; */
-    padding: 0 30px; }
-
-  .signin-image {
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 50px;
-    order: 2;
-    -moz-order: 2;
-    -webkit-order: 2;
-    -o-order: 2;
-    -ms-order: 2; }
-
-  .signup-form, .signup-image, .signin-form, .signin-image {
-    width: auto; }
-
-  .social-login {
-    justify-content: center;
-    -moz-justify-content: center;
-    -webkit-justify-content: center;
-    -o-justify-content: center;
-    -ms-justify-content: center; }
-
-  .form-button {
-    text-align: center; }
-
-  .signin-form {
-    order: 1;
-    -moz-order: 1;
-    -webkit-order: 1;
-    -o-order: 1;
-    -ms-order: 1;
-    margin-right: 0px;
-    margin-left: 0px;
-    padding: 0 30px; }
-
-  .form-title {
-    text-align: center; } }
-@media screen and (max-width: 400px) {
-  .social-login {
-    flex-direction: column;
-    -moz-flex-direction: column;
-    -webkit-flex-direction: column;
-    -o-flex-direction: column;
-    -ms-flex-direction: column; }
-
-  .social-label {
-    margin-right: 0px;
-    margin-bottom: 10px; } }
